--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Jason's Website
 email: jmei@albany.edu
-description: Jason is a student at UAlbany.
+description: Jason is a student at UAlbany
 url: jasonmei119.github.io
 github_username: jasonmei119
 
