updated site title

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Jason's Website
+title: Jason Mei
 email: jmei@albany.edu
 description: Jason is a student at UAlbany
 url: jasonmei119.github.io
